--- a/src/compiled-assets/scss/partials/_tables.scss
+++ b/src/compiled-assets/scss/partials/_tables.scss
@@ -79,6 +79,8 @@ table {
 }
 
 .table-data {
+  table-layout: fixed;
+
   thead {
     display: none;
 
@@ -205,6 +207,10 @@ table {
         padding-top: $space-s;
       }
     }
+  }
+
+  .table-data-mini {
+    width: $space-xxxxxl;
   }
 }
 
